# 2048DQN-ai

./: CMakeLists.txt  README.md
src/: ai.cpp  animate.cpp  draw.cpp  game.hpp  input.cpp  logic.cpp  main.cpp  neuron.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp
